force-app/main/default/objects/ProductGroupList__c/fields/ClusterType__c.field-meta.xml
<CustomField>
    <fullName>ClusterType__c</fullName>
    <description>Niveau du cluster (pour le regroupement de type cluster)</description>
    <label>Cluster Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cluster1</fullName>
            </value>
            <value>
                <fullName>Cluster2</fullName>
            </value>
            <value>
                <fullName>Cluster3</fullName>
            </value>
            <value>
                <fullName>OtherCluster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>