force-app/main/default/objects/ProductGroupList__c/fields/ProductChild__c.field-meta.xml
<CustomField>
    <fullName>ProductChild__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product faisant partie du groupe</description>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Group Lists (Child Product)</relationshipLabel>
    <relationshipName>Product_Group_Lists1</relationshipName>
    <type>Lookup</type>
</CustomField>