force-app/main/default/objects/ProductGroupList__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produit de référence pour le groupe</description>
    <label>Reference product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Group Lists</relationshipLabel>
    <relationshipName>Product_Group_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>