force-app/main/default/objects/ProductGroupList__c/recordTypes/Cluster.recordType-meta.xml
<RecordType>
    <fullName>Cluster</fullName>
    <active>true</active>
    <label>Cluster</label>
</RecordType>