force-app/main/default/objects/ProductGroupList__c/recordTypes/Display.recordType-meta.xml
<RecordType>
    <fullName>Display</fullName>
    <active>true</active>
    <label>Display</label>
</RecordType>